ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings14_ES6/input.ts.stderr
error: Invalid unciode code point
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings14_ES6/input.ts:4:13
  |
4 | var x = "\u{-DDDD}";
  |             ^

